Header: add local search (right aligned) with docusaurus-search-local; Footer: replicate Cien.ai bottom section (no social links)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,12 +37,15 @@
   height: 28px;
 }
 
-/* Force hamburger (mobile) navigation on desktop: hide items, show toggle */
+/* Force hamburger (mobile) navigation on desktop: hide left items, keep right items (search), show toggle */
 @media screen and (min-width: 996px) {
-  .navbar__items {
+  .navbar__items--left {
     display: none;
   }
   .navbar__toggle {
+    display: inline-flex;
+  }
+  .navbar__items--right {
     display: inline-flex;
   }
 }
