Header: enforce #212228 on fixed/inner navbar; Homepage: resolve banner via require('@site/static/...').default to fix broken image

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -45,8 +45,11 @@
 }
 
 /* Header background color uniform across light/dark */
-.navbar {
+.navbar,
+.navbar.navbar--fixed,
+.navbar .navbar__inner {
   background-color: #212228 !important;
+  box-shadow: none !important;
 }
 
 /* Show inline navigation at all widths; remove hamburger */
