Navbar: exact match to footer color (#212228) by removing gradient and border; solid background

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -51,7 +51,9 @@
 .navbar .navbar__inner,
 .navbar .navbar__inner .container {
   background-color: #212228 !important;
+  background-image: none !important;
   box-shadow: none !important;
+  border-bottom: 0 !important;
 }
 
 /* Header navigation item colors */
